--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
 
     <link rel="stylesheet" href="./styles.css" />
 
@@ -20,9 +20,9 @@
   </head>
   <body>
     <aside>
-      <img src="./logo.png" alt="Logo NLW Spcatime" />
+      <img src="./assets/logo.png" alt="Logo NLW Spcatime" />
       <img
-        src="./WhatsApp Image 2023-05-18 at 18.07.32.jpeg"
+        src="./assets/WhatsApp Image 2023-05-18 at 18.07.32.jpeg"
         alt="Foto do Richard"
       />
 
@@ -44,13 +44,16 @@
         <h1>Chapada dos Veadeiros - GO</h1>
         <div>
           <img
-            src="./WhatsApp Image 2023-05-18 at 18.17.21 (1).jpeg"
+            src="./assets/WhatsApp Image 2023-05-18 at 18.17.21 (1).jpeg"
             alt="Eu na Cachoeira de 90Metros de altura"
           />
         </div>
 
         <div>
-          <img src="./WhatsApp Image 2023-05-18 at 18.17.22.jpeg" alt="" />
+          <img
+            src="./assets/WhatsApp Image 2023-05-18 at 18.17.22.jpeg"
+            alt=""
+          />
         </div>
         <p>
           Essa viagem foi a mais recente, foi em comemoração do meu aniversaio
@@ -69,10 +72,10 @@
         <small>12 de feverreiro de 2022</small>
         <h1>Arraial do cabo - RJ</h1>
         <div>
-          <img src="./arraial p 2.jpeg" alt="Escuna" />
+          <img src="./assets/arraial p 2.jpeg" alt="Escuna" />
         </div>
         <div>
-          <img src="./arraial p 3.jpeg" alt="" />
+          <img src="./assets/arraial p 3.jpeg" alt="" />
         </div>
         <p>
           Essa viagem foi de ultima hora, era uma quinta feira meu primo falou
@@ -91,10 +94,10 @@
         <small>2019 e 2022</small>
         <h1>Floripa - SC</h1>
         <div>
-          <img src="./Floripa (4).jpeg" alt="Floripa" />
+          <img src="./assets/Floripa (4).jpeg" alt="Floripa" />
         </div>
         <div>
-          <img src="./Floripa (2).jpeg" alt="" />
+          <img src="./assets/Floripa (2).jpeg" alt="" />
         </div>
         <p>
           Floripa realmente é um lugar muito bacana pra se conhecer, Ja fui duas
@@ -113,7 +116,7 @@
         <small>2018</small>
         <h1>Captolio - MG</h1>
         <div>
-          <img src="./cap (2).jpeg" alt="Floripa" />
+          <img src="./assets/cap (2).jpeg" alt="Floripa" />
         </div>
         <p>
           Captolio foi umas das primeiras viagens, fiquei 3 dias em um hostel
