--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <small>12 de feverreiro de 2022</small>
         <h1>Arraial do cabo - RJ</h1>
         <div>
-          <img src="./assets/arraial p 2.jpeg" alt="Escuna" />
+          <img src="./assets/Arraial p 2.jpeg" alt="Escuna" />
         </div>
         <div>
           <img src="./assets/arraial p 3.jpeg" alt="" />
